# DeadRecs

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/raw/: songs_index.json
data/raw/songs/: 100_gimme-some-lovin.json  101_gloria.json  102_goin-down-the-road-feelin-bad.json  103_the-golden-road-to-unlimited-devotion.json  104_gomorrah.json  105_good-lovin.json  106_good-morning-little-schoolgirl.json  107_goodnight-irene.json  108_greatest-story-ever-told.json  109_green-onions.json  10_its-all-over-now.json  110_hard-to-handle.json  111_the-harder-they-come.json  112_hes-gone.json  113_he-was-a-friend-of-mine.json  114_heaven-help-the-fool.json  115_hell-in-a-bucket.json  116_help-on-the-way.json  117_henry.json  118_here-comes-sunshine.json  119_hey-little-one.json  11_alligator.json  120_high-heeled-sneakers.json  121_high-time.json  122_hitch-hiking-woman.json  123_how-long-blues.json  124_how-sweet-it-is.json  125_hully-gully.json  126_hurts-me-too.json  127_ill-take-a-melody.json  128_im-a-hog-for-you.json  129_ive-been-all-around-this-world.json  12_althea.json  130_i-believe.json  (+341 more)
deadrecs/: __init__.py  cli.py  features.py  graph.py  info.py  model.py  recommend.py  scraper.py  train.py  utils.py
docs/: design.md  implementation-plan.md  requirements.md  roadmap.md
docs/01-initial-impl/: design.md
tests/: test_cli.py  test_features.py  test_graph.py  test_info.py  test_model.py  test_recommend.py  test_scraper.py  test_train.py  test_utils.py
tests/fixtures/: song_index.html  song_performances.html  song_performances_page2.html
