[project]
name = "deadrecs"
version = "0.1.0"
description = "A Grateful Dead show recommendation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
deadrecs = "deadrecs.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
