[project]
name = "deadrecs"
version = "0.1.0"
description = "A Grateful Dead show recommendation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "torch>=2.0",
    "torch-geometric>=2.4",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "click>=8.1",
    "numpy>=1.24",
    "sentence-transformers>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
deadrecs = "deadrecs.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deadrecs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
